<resources>
    <string name="app_name">Sunshine</string>

    <string name="permission_welcome">Welcome!</string>
    <string name="permission_message">The app needs access to your location to deliver your weather.</string>
    <string name="permission_button">Accept</string>

    <string name="general_error_title">Something went wrong!</string>
    <string name="failed_load_location_error">Failed to load this location.</string>
    <string name="permission_error">Something went wrong! Try again.</string>
    <string name="weather_error">The weather could not be loaded!</string>
    <string name="search_error">Locations could not be loaded!</string>
    <string name="location_not_supported_error">This location is not supported!</string>
    <string name="database_error">Your locations could not be loaded!</string>
    <string name="database_remove_error">Could not remove location!</string>
    <string name="gps_network_not_enabled_title">Location turned off</string>
    <string name="gps_network_not_enabled_body">Looks like location is turned off.
        Without it you will be unable to see the weather for your current location.
        \n\nWould you like to enable it?</string>
    <string name="open_location_settings">Open settings</string>
    <string name="no">No thanks</string>

    <string name="remove_location_title">Remove location?</string>
    <string name="remove_location_body">This removes the location from the list. You can always add it again later.</string>
    <string name="remove_location_confirm">Remove</string>
    <string name="remove_location_cancel">Cancel</string>

    <string name="item_map">Map</string>
    <string name="item_stats">Charts</string>
    <string name="item_warnings">Warnings</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="places">Places</string>
    <string name="current_location">Current location</string>
    <string name="search_hint">Search locations...</string>

    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>

    <string name="north">North</string>
    <string name="northeast">Northeast</string>
    <string name="east">East</string>
    <string name="southeast">Southeast</string>
    <string name="south">South</string>
    <string name="southwest">Southwest</string>
    <string name="west">West</string>
    <string name="northwest">Northwest</string>

    <string name="precipitation">Precipitation</string>
    <string name="precipitation_low">Precipitation min</string>
    <string name="precipitation_median">Precipitation median</string>
    <string name="precipitation_high">Precipitation max</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="gusts">Gusts</string>
    <string name="cloud_cover">Cloud cover</string>
    <string name="feels_like">Feels like</string>

    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="data">Data</string>
    <string name="data_source">Select data source</string>

    <string name="theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="color_theme">Select theme</string>

    <string name="blue">Sky</string>
    <string name="orange">Sunset</string>
    <string name="purple">Twilight</string>
    <string name="green">Aurora</string>

    <string name="units">Units</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="hour_format">Hour format</string>
    <string name="relative_wind_title">Relative wind direction</string>
    <string name="relative_wind_body">Makes the wind direction arrow relative to the rotation of the phone</string>
    <string name="invalidate_cache_title">Clear weather data</string>
    <string name="invalidate_cache">Removes all cached weather data</string>
    <string name="cache_invalidated">Cache was cleared.</string>
    <string name="other">Other</string>

    <string name="diagram">Charts</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Martin Ryberg Laude</string>
    <string name="developer_location">Stockholm, Sweden</string>
    <string name="developer_website">Visit website</string>
    <string name="developer_website_url">martinryberglaude.com</string>
    <string name="developer_twitter">My twitter</string>
    <string name="developer_twitter_name">\u0040martini_rl</string>
    <string name="developer_instagram">My instagram</string>
    <string name="developer_instagram_name">\u0040martinryberglaude</string>
    <string name="licenses">Licenses</string>
    <string name="license">License</string>

    <string name="search_location_hint">Search for a location...</string>
    <string name="no_location_title">Oops!</string>
    <string name="no_location_body">Could not find a location with that name. Keep in mind only Scandinavia and Finland are supported.</string>
    <string name="search_location_title">Search location</string>
    <string name="search_location_body">Find a location using the search engine</string>
    <string name="location_already_exists">Locations is already added!</string>

    <string name="clear">Clear</string>
    <string name="almost_clear">Almost clear</string>
    <string name="light_cloudiness">Light cloudiness</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="varying_cloudiness">Varying cloudiness</string>
    <string name="half_clear">Half clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="overcast">Overcast</string>
    <string name="fog">Fog</string>
    <string name="light_rain_showers">Light rain showers</string>
    <string name="moderate_rain_showers">Moderate rain showers</string>
    <string name="heavy_rain_showers">Heavy rain showers</string>
    <string name="thunder_storm">Thunderstorm</string>
    <string name="light_sleet_showers">Light sleet showers</string>
    <string name="moderate_sleet_showers">Moderate sleet showers</string>
    <string name="heavy_sleet_showers">Heavy sleet showers</string>
    <string name="light_snow_showers">Light snow showers</string>
    <string name="moderate_snow_showers">Moderate snow showers</string>
    <string name="heavy_snow_showers">Heavy snow showers</string>
    <string name="rain">Rain</string>
    <string name="light_rain">Light rain</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="thunder">Thunder</string>
    <string name="sleet">Sleet</string>
    <string name="light_sleet">Light sleet</string>
    <string name="moderate_sleet">Moderate sleet</string>
    <string name="heavy_sleet">Heavy sleet</string>
    <string name="snow">Snow</string>
    <string name="light_snow">Light snow</string>
    <string name="moderate_snow">Moderate snow</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="drizzle">Drizzle</string>

</resources>
