<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/data"
        app:iconSpaceReserved="false">
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/data_source"
            android:key="data_src"
            android:defaultValue="smhi"
            android:entries="@array/data_srcs"
            android:entryValues="@array/data_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/theme"
        app:iconSpaceReserved="false">
            <SwitchPreference
                app:iconSpaceReserved="false"
                android:title="@string/dark_theme"
                android:key="dark_theme"
                android:defaultValue="false"/>
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/color_theme"
            android:key="theme"
            android:defaultValue="day"
            android:entries="@array/backgrounds"
            android:entryValues="@array/background_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/units"
        app:iconSpaceReserved="false">
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/temperature"
            android:key="temperature"
            android:defaultValue="c"
            android:entries="@array/temperature_units"
            android:entryValues="@array/temperature_units_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/wind"
            android:key="wind"
            android:defaultValue="mps"
            android:entries="@array/wind_units"
            android:entryValues="@array/wind_units_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/precipitation"
            android:key="rain"
            android:defaultValue="mm"
            android:entries="@array/rain_units"
            android:entryValues="@array/rain_units_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/pressure"
            android:key="pressure"
            android:defaultValue="hpa"
            android:entries="@array/pressure_units"
            android:entryValues="@array/pressure_units_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/visibility"
            android:key="vis"
            android:defaultValue="km"
            android:entries="@array/visibility_units"
            android:entryValues="@array/visibility_units_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
        <ListPreference
            app:iconSpaceReserved="false"
            android:title="@string/hour_format"
            android:key="hour"
            android:defaultValue="24h"
            android:entries="@array/hour_format"
            android:entryValues="@array/hour_format_values"
            android:negativeButtonText="@string/remove_location_cancel"/>
        <SwitchPreference
            app:iconSpaceReserved="false"
            android:title="@string/relative_wind_title"
            android:summary="@string/relative_wind_body"
            android:key="relative_wind"
            android:defaultValue="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/other"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            android:title="@string/invalidate_cache_title"
            android:summary="@string/invalidate_cache"
            android:key="invalidate">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
