<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".GraphsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_ghs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?attr/primaryColor"
        android:clipToPadding="false"
        android:elevation="4dp">
        <TextView
            android:id="@+id/title_ghs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_below="@id/toolbar_ghs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/temperature"/>
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_temperature"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/wind"/>
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_wind"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/precipitation"/>
            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/chart_precipitation"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/pressure"/>
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_pressure"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/humidity"/>
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_humidity"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>