<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?attr/primaryColor"
        android:clipToPadding="false"
        android:elevation="4dp">
        <EditText
            android:id="@+id/edittext_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:background="@color/transparent"
            android:hint="@string/search_hint"/>
    </androidx.appcompat.widget.Toolbar>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"/>
    <TextView
        android:id="@+id/no_location_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:textSize="22sp"
        android:text="@string/search_location_title"
        android:textColor="?attr/textColorPrimary"/>
    <TextView
        android:id="@+id/no_location_body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/no_location_title_text"
        android:textSize="14sp"
        android:text="@string/search_location_body"
        android:textColor="?attr/textColorSecondary"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/toolbar_sch"
        android:id="@+id/recycler_view_locations"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>