<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/card_background"
    android:id="@+id/recycler_row_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:text="Torsdag"
                android:id="@+id/text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="?attr/textColorPrimary"/>
            <TextView
                android:text="Måttliga skurar snöblandat regn"
                android:id="@+id/text_wsymb2"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_day"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/textColorSecondary"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            android:textColor="?attr/textColorSecondary"
            android:text="10°"/>


        <ImageView
            android:id="@+id/wsymb2_img"
            android:gravity="center_vertical"
            android:layout_width="36dp"
            android:layout_height="72dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/wi_cloudy"
            android:tint="?attr/primaryColor"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/details"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="none">
        <TableRow
            android:gravity="center">
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_wi_umbrella"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_rain_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="12mm"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/precipitation"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/ic_wind_icon"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_wi_direction_s"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="5 m/s"/>
                <TextView
                    android:id="@+id/ic_wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="Sydväst"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_wi_barometer"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_air_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="1010 hpa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/pressure"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/wi_fog"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="8 km"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/visibility"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_marginTop="16dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_wi_raindrop"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="44%"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/humidity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_wi_strong_wind"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_gust_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="11 m/s"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/gusts"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/wi_cloudy"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_cloud_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="55%"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/cloud_cover"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_wi_thermometer"
                    android:tint="?attr/primaryColor"/>
                <TextView
                    android:id="@+id/ic_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:fontFeatureSettings="smcp"
                    android:textColor="?attr/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="1°C"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:textColor="?attr/textColorSecondary"
                    android:textSize="12sp"
                    android:text="@string/feels_like"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>